--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "night-api",
   "description": "Ce paquet Npm fourni une interface pour intéragir avec [Night-API](https://night-api.ga)",
-  "version": "1.1.0-dev",
+  "version": "1.0.3",
   "main": "index.js",
-  "types": "index.d.ts",
   "directories": {
     "test": "tests"
   },
@@ -12,7 +11,7 @@
   },
   "repository": {
     "type": "github",
-    "url": "https://github.com/Night-API/Night-API/tree/dev"
+    "url": "https://github.com/Night-API/Night-API"
   },
   "keywords": [
     "API",
