--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "night-api",
   "description": "Ce paquet Npm fourni une interface pour intéragir avec [Night-API](https://night-api.ga)",
-  "version": "1.0.3",
+  "version": "1.1.0-dev",
   "main": "index.js",
+  "types": "index.d.ts",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docs": "./node_modules/jsdoc/jsdoc.js -c ./.jsdoc.conf.json"
   },
   "repository": {
     "type": "github",
-    "url": "https://github.com/Night-API/Night-API"
+    "url": "https://github.com/Night-API/Night-API/tree/dev"
   },
   "keywords": [
     "API",
@@ -31,6 +33,7 @@
     "npm": ">= 6.9.0"
   },
   "dependencies": {
+    "jsdoc": "^3.6.7",
     "node-fetch": "^2.6.1"
   }
 }
