--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "github",
-    "url": "https://github.com/Night-API/Night-API"
+    "url": "https://github.com/Night-API/Night-API-module"
   },
   "keywords": [
     "API",
