--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "npm": ">= 6.9.0"
   },
   "dependencies": {
-    "axios": "^0.26.1",
-    "node-fetch": "^2.6.1"
+    "axios": "^0.26.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.26",
