--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "night-api",
-  "version": "1.1.0",
-  "description": "Ce paquet Npm fourni une interface pour intéragir avec [Night-API](https://night-api.com)",
+  "version": "1.1.1",
+  "description": "Ce paquet NPM fourni une interface pour intéragir avec Night-API (https://night-api.com)",
   "main": "lib/index.js",
   "directories": {
     "test": "tests"
@@ -26,7 +26,7 @@
   "bugs": {
     "url": "https://github.com/Night-API/Night-API-module/issues"
   },
-  "homepage": "https://night-api.com",
+  "homepage": "https://docs.night-api.com",
   "engines": {
     "node": ">= 12.0.0",
     "npm": ">= 6.9.0"
